...
    private val backupRepository: BackupRepository,
    appLogger: AppLogger,
) : BaseAndroidViewModel(application, "SettingsViewModel", appLogger) {

    val supportedLanguages = listOf(
        LanguageOptions("en", "English"),
        LanguageOptions("pt-BR", "Português (Brasil)"),
        LanguageOptions("es-419", "Español (Latinoamérica)")
    )

    private val _currentLanguage = MutableStateFlow(getCurrentLanguageCode())
    val currentLanguage: StateFlow<String> = _currentLanguage.asStateFlow()

...
